--- a/bettstyle.css
+++ b/bettstyle.css
@@ -1,12 +1,12 @@
  h1 {
   color:  blue;
   font-size: 20px;
-  font-style: italic;
+  font-style: normal;
 }
 
 #test_id {
   font-size: 40px;
-  font-weight: 300;
+  font-weight: 200;
 }
 
 .test_class {
